# slam-book

./: .gitignore  README.md
ch3/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp  useGeomentry.cpp
ch4/: CMakeLists.txt  trajectoryError.cpp  useSophus.cpp
ch5/: CMakeLists.txt  jointMap.cpp  stereoVision.cpp
ch6/: CMakeLists.txt  ceresCurveFitting.cpp  gaussNewton.cpp
ch6/cmake/: FindG2O.cmake
ch7/: CMakeLists.txt  my_gaussNewton_3d2d.cpp  my_gaussnewton_3d2d.cpp  orb_cv.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch8/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
ch9/: CMakeLists.txt  main.cpp
usage_of_ceres/: CMakeLists.txt  ceresCurveFitting.cpp  official_demo.cpp
